# fafel-lang

./: .gitignore  README.md  blog.md  video.txt
code/: code.cabal  fafel.cabal
code/app/: .env  AST.hs  Codegen.hs  Lexer.hs  Main.hs  Parser.hs  TypeChecker.hs  example.fafel  send.js  storage.fafel
proposal/: CA326_Project_Proposal_Form.docx.txt
technical_manual/: tech_specs.md
user_manual/: USER_MAN.md
